Switch to common publish actions and upgrade to Java 21